--- a/lib/caption_stream/speech_apis/google_http_older/CMakeLists.txt
+++ b/lib/caption_stream/speech_apis/google_http_older/CMakeLists.txt
@@ -8,7 +8,7 @@ if (PLIBSYS_ROOT_DIR)
     set(PLIBSYS_DIR ${PLIBSYS_ROOT_DIR})
 else ()
     message("using default CI plibsys repo dir")
-    set(PLIBSYS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../../CI/deps/plibsys)
+    set(PLIBSYS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../../deps/plibsys)
 endif ()
 
 ##PLIBSYS
